TreeAnalysis/Plot/Plot_before271014/SR_sigINstate+irred_bkg_MC.txt
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_CR2P2F/TTGJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_CR2P2F/DYJetsToLLTuneZ2M10.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_CR2P2F/TTGJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_CR2P2F/DYJetsToLLTuneZ2M10.root therefore preventing schema evolution when reading this file.
Info in <TCanvas::Print>: file Stack_SR_MC_sigINstate+irred_bkg.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_MC_sigINstate+irred_bkg.root has been created
Info in <TCanvas::Print>: pdf file Stack_SR_MC_sigINstate+irred_bkg.pdf has been created
TTGJets  has no enetries or is a zombie
DYJetsToLLTuneZ2M10  has no enetries or is a zombie

FAKE RATE DENTRO IL MODULO---------->  5.22510519561 


FAKE RATE NEL MAIN--------->  MC driven. Total number of irreducible background events:  5.22510523641 

TTGJets  has no enetries or is a zombie
DYJetsToLLTuneZ2M10  has no enetries or is a zombie

FAKE RATE DENTRO IL MODULO---------->  5.22510519561 


######### MonteCarlo samples #########

WWZJets .......................... 0.302447076057
TTWWJets .......................... 0.0043484694387
TTZJets .......................... 1.58860274195
ZZTo2e2mu .......................... 117.637175873
ZZTo2e2muJJ_SMHContinInterf_H125.6 .......................... 1.07584732932
ZZTo4eJJ_SMHContinInterf_H125.6 .......................... 0.439676628528
ZZTo4e .......................... 48.0115651688
ZZTo4mu .......................... 69.5773944438
ZZTo4muJJ_SMHContinInterf_H125.6 .......................... 0.632912153502
ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 .......................... 8.5194750472
ggTo4e_SMHContinInterf-MCFM67_H125.6 .......................... 3.46717997273
ggTo4mu_SMHContinInterf-MCFM67_H125.6 .......................... 5.03659349356

######### Data #########

DoubleMu .......................... 108.0
DoubleEle .......................... 179.0
MuEG .......................... 1.0
digit anything you want to end the script 
Traceback (most recent call last):
  File "../python/StackPlot_func.py", line 256, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
